<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomBar" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView android:layout_width="wrap_content"
        android:id="@+id/weight"
        android:layout_height="wrap_content"
        android:text="@string/weightField"/>

    <EditText
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextWeight"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightField"/>

    <EditText
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextHeightFt"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftLabel"
            />

        <EditText
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextHeightIn"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inLabel"
            />

    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/calBMI"
        android:id="@+id/calcBMI"
        android:layout_below="@+id/tableRow1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ResultBmi"
        android:layout_toEndOf="@+id/calcBMI"
        android:layout_toRightOf="@+id/calcBMI"
        android:layout_below="@+id/tableRow1"
        android:editable="false"/>


</RelativeLayout>