<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomBar" >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/userName"
                android:ems="10"
                android:id="@+id/personName"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <AutoCompleteTextView
                android:id="@+id/emailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/personName"
                android:maxLines="1"
                android:singleLine="true"/>


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password"
                android:layout_below="@+id/emailAddress"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmPassword"
                android:id="@+id/passwordConfirm"
                android:layout_below="@+id/password"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/register"
                android:id="@+id/register"
                android:layout_below="@+id/passwordConfirm"
               />






</RelativeLayout>