<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomBar" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ageField"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ageHeartRate"/>

    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/calcBtn"
        android:id="@+id/calcHeartRate"
        android:layout_below="@+id/resultMaxRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxRate"
        android:text="@string/maxHeartRateLabel"
        android:layout_below="@+id/tableRow1"
        />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/resultMaxRate"
        android:layout_alignTop="@+id/resultTargetRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/targetRate"
        android:text="@string/heartRateRangeLabel"
        android:layout_toEndOf="@+id/resultMaxRate"
        android:layout_below="@+id/tableRow1"
        android:layout_toRightOf="@+id/resultMaxRate" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/resultTargetRate"
        android:layout_below="@+id/targetRate"
        android:layout_toEndOf="@+id/maxRate"
        android:layout_toRightOf="@+id/resultMaxRate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:editable="false"
       />


</RelativeLayout>