<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomBar" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView android:layout_width="wrap_content"
        android:id="@+id/calBMIText"
        android:layout_height="wrap_content"
        android:text="@string/bmrLabel"/>

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/calorieBMI"/>

        <TextView android:layout_width="wrap_content"
            android:id="@+id/activityLevelCal"
            android:layout_height="wrap_content"
            android:text="@string/activityLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCal" />
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/calcBtn"
        android:id="@+id/calcCalories"
        android:layout_below="@+id/tableRow1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/resultCalories"
        android:layout_below="@+id/tableRow1"
        android:layout_alignRight="@+id/tableRow1"
        android:layout_alignEnd="@+id/tableRow1"
        android:layout_toRightOf="@+id/calcCalories"
        android:layout_toEndOf="@+id/calcCalories"
        android:layout_alignBottom="@+id/calcCalories"
        android:editable="false"/>
</RelativeLayout>